# plexi-website

./: .gitignore  Cargo.toml  Rocket.toml
migrations/2024-09-26-023431_create_posts_table/: up.sql
migrations/2024-09-28-170239_create_users_table/: down.sql  up.sql
migrations/2024-10-01-005133_add_post_timestamp/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  post.rs  rss_gen.rs  schema.rs  time_util.rs  user.rs
static/: base.css
templates/: base.html.tera  index.html.tera  login.html.tera  new_post.html.tera
